tests/invalid/generated_binop_lshift_none_float/main.py
# Auto-generated invalid binop case.
def main() -> None:
    x: None = None
    y: float = 1.0
    z = x << y
